[package]
name = "poc-forged-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures-util = "0.3.30"
reqwest = "0.11.27"
serde_json = "1.0.120"
tracing = "0.1.40"
rand = "0.8"
indexmap = "2"
tokio = {version = "1", features = ["full"]}

[dependencies.snarkvm]
git = "https://github.com/AleoNet/snarkVM.git"
rev = "d170a9f" # If this is updated, the rev in `node/rest/Cargo.toml` must be updated as well.
#version = "=0.16.18"
features = [ "circuit", "console"]

[dependencies.aleo-std]
version = "=0.1.24"
default-features = false